// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading component Renders initial component 1`] = `
<Heading
  text="Hello Rick"
>
  <h1
    className=""
    title="Hello Rick"
  >
    Hello Rick
  </h1>
</Heading>
`;

exports[`Heading component Works with MessageDescriptors 1`] = `
<Heading
  text={
    Object {
      "defaultMessage": "Hello Rick",
      "id": "rick",
    }
  }
>
  <h1
    className=""
    title="Hello Rick"
  >
    Hello Rick
  </h1>
</Heading>
`;
